refactor(app): List.get(0) -> getFirst() (SequencedCollection)
Two provably-non-empty first-element reads modernized to the Java 21+
SequencedCollection accessor: ReciprocalRankFusion (guarded by the preceding
scores.isEmpty() return) and ApiToken.findActiveByPlaintext (guarded by the
isEmpty() ternary). Behavior-identical.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>